# robotics-localization-ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ir_localization/lib/ir_localization/: bright_spot_detect
install/ir_localization/share/ir_localization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/radio_wave_localization/share/radio_wave_localization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense_mapping/lib/realsense_mapping/: cam_publisher
log/: latest_build  latest_list
src/ir_localization/: setup.cfg  setup.py
src/ir_localization/ir_localization/: bright_spot_detect.py
src/radio_wave_localization/: setup.cfg  setup.py
src/radio_wave_localization/radio_wave_localization/: distance2transform_node.py
src/realsense_mapping/: CMakeLists.txt  package.xml
src/realsense_mapping/config/: realsense_params.yaml
src/realsense_mapping/realsense_launch/: base_link_to_camera_link.launch.py  base_link_to_camera_link2.launch.py  depthimage_to_laserscan.launch.py  realsense.launch.py  realsense2.launch.py
src/realsense_mapping/rtabmap_launch/: cam_publisher.launch.py  lidar_localization_rtabmap.launch.py  standard_realsense_rtabmap_launch.xml  standard_rtabmap.launch.py  standard_rtabmap_backward.launch.py  standard_two_realsense_rtabmap.launch.py  standard_two_realsense_rtabmap_launch.xml  standard_two_realsense_rtabmap_lidar_launch.xml
src/realsense_mapping/src/: cam_publisher.cpp  cam_publisher_two.cpp
(+42 files in other folders)
