<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_mapping</name>
  <version>0.0.0</version>
  <description>Contains configuration and launch files for realsense d435i and RTABMAP</description>
  <maintainer email="kushtimusprime@gmail.com">kushtimusprime</maintainer>
  <license>Copyright Vanderbilt Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
